Updated logo, added french translations and changed popup to AlertDialog
Signed-off-by: Krow10 <23462475+Krow10@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
             minifyEnabled false
             signingConfig signingConfigs.release
         }
+
+        debug {
+            pseudoLocalesEnabled true
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
